--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ProjetDevMobileMoussironLamothe</string>
+    <string name="info">Info</string>
+    <string name="produits">Produits</string>
 </resources>
