--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">ProjetDevMobileMoussironLamothe</string>
     <string name="info">Info</string>
     <string name="produits">Produits</string>
+    <string name="student1">Nathan Moussiron</string>
+    <string name="student2">Hugo Lamothe</string>
+    <string name="infoStudent1">Info Etudiant</string>
+    <string name="NameStudent1">Moussiron Nathan</string>
+    <string name="MailStudent1">nathan.moussiron@epsi.fr</string>
+    <string name="GroupStudent1">Dev Full stack Groupe 1</string>
 </resources>
