--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="products_url">Products_url</string>
     <string name="title">Title</string>
     <string name="categorie">Categorie</string>
+    <string name="description">Description :</string>
 </resources>
